--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "mongodb": "^4.8.0",
     "mongoose": "^6.4.5"
   },
